--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add To Cart</title>
-  <link rel="stylesheet" href="../src/styles/main.css" />
+  <title>Webpack Basic</title>
 </head>
 
-
 <body>
-  <section class="App">
-    Hare Krishna
-  </section>
-  <script src="/bundle.js"></script>
+  <h1>
+    Hare Krishna Hare Rama
+  </h1>
+  <p>Hello Saas!</p>
 </body>
 
 </html>
