--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-  <h1>
-    Hare Krishna Hare Rama
-  </h1>
-  <p>Hello Saas!</p>
+  <section class="App">
+    <img src="./assets/images/krishna-logo.png" alt="site-logo" />
+    <input class="user-input" placeholder="add item" />
+    <button class="btn btn-add">Add to cart</button>
+  </section>
 </body>
 
 </html>
