--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,26 @@
 </head>
 
 <body>
-  <section class="App">
-    <img src="./assets/images/krishna-logo.png" alt="site-logo" />
+  <section class="app">
+    <img class="app-logo" src="./assets/images/cat.png" alt="site-logo" />
     <input class="user-input" placeholder="add item" />
     <button class="btn btn-add">Add to cart</button>
+    <ul class="display-items">
+      <li>ram</li>
+      <li>sitaram</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaram</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li>
+    </ul>
+    </div>
   </section>
 </body>
 
