Feat: Firebase - Add - Delete

--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,9 @@
     <input class="user-input" placeholder="add item" />
     <button class="btn btn-add">Add to cart</button>
     <ul class="display-items">
-      <li>ram</li>
+      <!-- <li>ram</li>
       <li>sitaram</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaram</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
-      <li>sitaramhanuman</li>
+      <li>sitaramhanuman</li> -->
     </ul>
     </div>
   </section>
