--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Basic</title>
+  <title>Hand Cart</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/resource/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/resource/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/resource/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
