--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
   <section class="app">
     <img class="app-logo" src="./assets/images/cat.png" alt="site-logo" />
     <input class="user-input" placeholder="add item" />
-    <button class="btn btn-add">Add to cart</button>
+    <div class="actions btn-wrapper">
+      <button class="btn btn-add">Add to cart</button>
+      <button class="btn btn-clear">Clear All</button>
+    </div>
     <ul class="display-items">
     </ul>
     </div>
