--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/public/resource/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/public/resource/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/resource/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials">
 </head>
 
 <body>
