--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <img class="app-logo" src="./assets/images/cat.png" alt="site-logo" />
     <input class="user-input" placeholder="add item" />
     <div class="actions btn-wrapper">
-      <button class="btn btn-add">Add to cart</button>
+      <button class="btn btn-add">Add to Cart</button>
       <button class="btn btn-clear">Clear All</button>
     </div>
     <ul class="display-items">
